--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -14,16 +14,24 @@
         "data": {
           "username": "Zendure Username",
           "password": "Zendure Password",
+          "p1meter": "P1 Sensor for smart matching",
           "broker": "Local MQTT broker",
-          "p1meter": "P1 Sensor for smart matching"
+          "brokeruser": "Local MQTT broker username",
+          "brokerpsw": "Local MQTT broker password",
+          "wifissid": "Wifi SSID",
+          "wifipsw": "Wifi Password"
         }
       },
       "reconfigure": {
         "data": {
           "username": "Zendure Username",
           "password": "Zendure Password",
+          "p1meter": "P1 Sensor for smart matching",
           "broker": "Local MQTT broker",
-          "p1meter": "P1 Sensor for smart matching"
+          "brokeruser": "Local MQTT broker username",
+          "brokerpsw": "Local MQTT broker password",
+          "wifissid": "Wifi SSID",
+          "wifipsw": "Wifi Password"
         }
       }
     }
