--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -88,6 +88,13 @@
           "10": "Electricity Price"
         }
       },
+      "soc_status": {
+        "name": "Soc status",
+        "state": {
+          "0": "Active",
+          "1": "Auto-Calibration"
+        }
+      },
       "pack_num": {
         "name": "Battery Count"
       },
