Fix Hub1200 entities

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -88,6 +88,17 @@
           "10": "Electricity Price"
         }
       },
+      "pass_mode": {
+        "name": "Pass mode",
+        "state": {
+          "0": "Automatic",
+          "1": "Always off",
+          "2": "Always on"
+        }
+      },
+      "so_h": {
+        "name": "State of health"
+      },
       "soc_status": {
         "name": "Soc status",
         "state": {
@@ -95,14 +106,18 @@
           "1": "Auto-Calibration"
         }
       },
+      "hub_state": {
+        "name": "Hub status",
+        "state": {
+          "0": "Stop output and standby",
+          "1": "Stop output and switch off"
+        }
+      },
       "pack_num": {
         "name": "Battery Count"
       },
       "bat_volt": {
         "name": "Battery Voltage"
-      },
-      "hub_state": {
-        "name": "Hub State"
       },
       "electric_level": {
         "name": "Battery"
