+Add remain_out_time Translation +Add remain_input_time Translation
Is tested by me

--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -181,6 +181,12 @@
       },
       "strength": {
         "name": "WLAN Signalstärke"
+      },
+      "remain_out_time": {
+        "name": "Verbleibende Entladezeit"     
+      },  
+      "remain_input_time": {
+        "name": "Verbleibende Ladezeit"        
       }
     },
     "select": {
@@ -208,7 +214,7 @@
           "manual": "Manuelle Leistungsregelung",
           "smart": "Smarte Leistungsregelung"
         }
-      },
+      }, 
       "pass_mode": {
         "name": "Bypass-Modus",
         "state": {
@@ -217,6 +223,7 @@
           "on": "Immer an"
         }
       }
+      
     },
     "switch": {
       "lamp_switch": {
