--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -264,6 +264,12 @@
       },
       "strength": {
         "name": "Wifi Signal Strength"
+      },
+      "remain_out_time": {
+        "name": "Remaining Discharge Time"     
+      },  
+      "remain_input_time": {
+        "name": "Remaining Charge Time"        
       }
     },
     "select": {
