--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -126,6 +126,12 @@
       },
       "strength": {
         "name": "Wifi Signaalsterkte"
+      },
+      "remain_out_time": {
+        "name": "Resterende Ontlaadtijd"
+      },  
+      "remain_input_time": {
+        "name": "Resterende Laadtijd"
       }
     },
     "select": {
