--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -15,9 +15,9 @@
           "username": "Zendure Gebruikersnaam",
           "password": "Zendure Wachtwoord",
           "p1meter": "P1 Sensor voor slimme matching",
-          "broker": "Lokale MQTT broker",
-          "brokeruser": "Lokale MQTT broker Gebruikersnaam",
-          "brokerpsw": "Lokale MQTT broker Wachtwoord",
+          "mqttserver": "Lokale MQTT broker",
+          "mqttuser": "Lokale MQTT broker Gebruikersnaam",
+          "mqttpsw": "Lokale MQTT broker Wachtwoord",
           "wifissid": "Wifi SSID",
           "wifipsw": "Wifi Wachtwoord"
         }
@@ -27,9 +27,9 @@
           "username": "Zendure Gebruikersnaam",
           "password": "Zendure Wachtwoord",
           "p1meter": "P1 Sensor voor slimme matching",
-          "broker": "Lokale MQTT broker",
-          "brokeruser": "Lokale MQTT broker Gebruikersnaam",
-          "brokerpsw": "Lokale MQTT broker Wachtwoord",
+          "mqttserver": "Lokale MQTT broker",
+          "mqttuser": "Lokale MQTT broker Gebruikersnaam",
+          "mqttpsw": "Lokale MQTT broker Wachtwoord",
           "wifissid": "Wifi SSID",
           "wifipsw": "Wifi Wachtwoord"
         }
