--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -116,10 +116,10 @@
         }
       },
       "pack_input_power": {
-        "name": "Batterij Output"
+        "name": "Batterij Laden"
       },
       "output_pack_power": {
-        "name": "Batterij Invoer"
+        "name": "Batterij Ontladen"
       },
       "hyper_tmp": {
         "name": "Batterijtemperatuur"
@@ -146,7 +146,7 @@
         "name": "Bedrijfsmodus",
         "state": {
           "off": "Uit",
-          "manual": "Handmatige Vermogen",
+          "manual": "Handmatig Vermogen",
           "smart": "Slimme Matching"
         }
       },
