--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -56,11 +56,26 @@
         "name": "Wifi Status"
       }
     },
+    
     "number": {
+      "input_limit": {
+        "name": "Limiet Opladen"
+      },
+      "output_limit": {
+        "name": "Limiet Ontladen"
+      },
       "manual_power": {
-        "name": "Handmatige Vermogen"
+        "name": "Handmatig vermogen"
+      },
+      "min_soc": {
+        "name": "SOC Minimaal"
+      },
+      "soc_set": {
+        "name": "SOC Maximaal"
       }
     },
+
+    
     "sensor": {
       "ambient_light_color": {
         "name": "Omgevingslichtkleur"
@@ -76,24 +91,38 @@
           "10": "Elektriciteitsprijs"
         }
       },
-      "bat_volt": {
-        "name": "Batterijspanning"
+
+      "so_h": {
+        "name": "Gezondheidsstatus"
       },
+      
+      "soc_status": {
+        "name": "Soc status",
+        "state": {
+          "0": "Actief",
+          "1": "Automatische kalibratie"
+          }
+        },
+
       "hub_state": {
         "name": "Hub Status"
       },
+
+      "pack_num": {
+        "name": "Batterij Aantal"
+      },
+      "bat_volt": {
+        "name": "Batterijspanning"
+      },      
       "electric_level": {
         "name": "Batterij"
-      },
-      "input_limit": {
-        "name": "Invoerlimiet"
       },
       "charging_mode": {
         "name": "Laadmodus",
         "state": {
           "0": "Geen",
-          "1": "modus 1",
-          "2": "modus 2"
+          "1": "Modus 1",
+          "2": "Modus 2"
         }
       },
       "charging_type": {
@@ -122,7 +151,7 @@
         "name": "Batterij Laden"
       },
       "hyper_tmp": {
-        "name": "Batterijtemperatuur"
+        "name": "Hyper Temperatuur"
       },
       "strength": {
         "name": "Wifi Signaalsterkte"
@@ -153,7 +182,7 @@
       "pass_mode": {
         "name": "Bypass-modus",
         "state": {
-          "auto": "automatisch",
+          "auto": "Automatisch",
           "off": "Altijd Uit",
           "on": "Altijd Aan"
         }
