--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -117,6 +117,9 @@
       "electric_level": {
         "name": "Batterij"
       },
+      "input_limit": {
+        "name": "Invoerlimiet"
+      },
       "charging_mode": {
         "name": "Laadmodus",
         "state": {
