--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -215,7 +215,8 @@
           "clusterowncircuit": "Gerät hat einen eigenen Stromkreis oder eine eigene Phase",
           "cluster800": "Cluster max. 800 W",
           "cluster1200": "Cluster max. 1200 W",
-          "cluster2400": "Cluster max. 2400 W"
+          "cluster2400": "Cluster max. 2400 W",
+          "cluster3600": "Cluster max. 3600w"
         }
       },
       "operation": {
